# CodeScope

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: benchmark_results.md  demo.md  failure_aware_diagnosis.md  field_evaluation.md
examples/buggy_auth_service/: auth_service.py  models.py  token_manager.py
examples/buggy_auth_service/tests/: test_auth_service.py
examples/buggy_calculator/: calculator.py
examples/buggy_task_api/app/: __init__.py  (+5 more)
examples/realistic_bugs/: README.md
src/codescope/: __init__.py  cli.py
tests/: conftest.py  test_ast_parser.py  test_benchmark_evaluator.py  test_chunker.py  test_cli_diagnose_json.py  test_cli_investigate.py  test_cli_investigate_llm.py  test_cli_llm_diagnose.py  test_cli_smoke.py  test_dependency_aware_retrieval.py  test_diagnosis_summary.py  test_embedder.py  test_failure_aware_retrieval.py  test_failure_call_graph_context.py  test_failure_scoring.py  test_failure_source_first_ranking.py  test_incremental_indexing.py  test_index_compatibility.py  test_index_store.py  test_investigation_llm_context.py  test_investigation_llm_prompt.py  test_investigator.py  test_issue_hypothesis.py  test_llm_context.py  test_llm_prompt.py  test_llm_providers.py  test_memory_store.py  test_openai_provider.py  test_path_utils.py  test_repo_scanner.py  test_retrieval_reasons.py  test_symbol_resolution.py  test_test_runner.py
vscode-extension/: README.md  package-lock.json  package.json  tsconfig.json
vscode-extension/src/: codescopeRunner.ts  extension.ts  pathUtils.ts  resultView.ts  types.ts
(+75 files in other folders)
