[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "codescope"
version = "0.1.0"
description = "Production-style AI-powered codebase intelligence system (scanner-first foundation)."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
core = [
  "pydantic>=2.0",
]
dev = [
  "pytest>=8.0",
  "ruff>=0.5",
]
ai = [
  "sentence-transformers>=2.2",
]
vectorstore = [
  "qdrant-client>=1.6",
]

[tool.hatch.build.targets.wheel]
packages = ["src/codescope"]

[tool.pytest.ini_options]
testpaths = ["tests"]
cache_dir = ".cache/pytest"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
